--- a/calendar_voting/views/controller_voting_view.xml
+++ b/calendar_voting/views/controller_voting_view.xml
@@ -9,7 +9,7 @@
                         <span class="meeting-span" >Date:</span>
                     </div>
                     <div class="meeting-div-info">
-                        <span class="meeting-span" t-esc="event.start"/>
+                        <span class="meeting-span" t-esc="event.show_date"/>
                     </div>
                     <div class="meeting-div-title">
                         <span class="meeting-span">Place:</span>
