--- a/communication_center_jitsi/views/jitsi_controller.xml
+++ b/communication_center_jitsi/views/jitsi_controller.xml
@@ -12,7 +12,8 @@
                 t-att-data-microphone_off="event.microphone_off"
                 t-att-data-webcam_off="event.webcam_off"
                 t-att-data-start_recording="event.start_recording"
-                t-att-data-no_recording="event.no_recording">
+                t-att-data-no_recording="event.no_recording"
+                t-att-data-meeting_subject="event.name">
             </div>
         </t>
     </template>
