--- a/user_settings_dav/views/user_collection_views.xml
+++ b/user_settings_dav/views/user_collection_views.xml
@@ -2,10 +2,11 @@
 <odoo>
     <record id="test-padge" model="ir.ui.view">
         <field name="model">res.users</field>
-        <field name="priority" eval="40"/>
+        <field name="priority" eval="1"/>
         <field name="inherit_id" ref="base.view_users_form_simple_modif"/>
         <field name="arch" type="xml">
-            <xpath expr="//page[@*='Account Security']" position="after">
+            <!-- <xpath expr="//page[@*='Account Security']" position="after"> -->
+            <xpath expr="//page" position="after">
                 <page name="user_collection" string="Calendar">
                     <field name="dav_collection_ids" mode="tree,kanban">
                         <tree string="DAV-Collections" delete="false" create="false">
