[IMP] Fixt a link to the voting site and toke away the option to log in to the voting site without a token

--- a/calendar_voting/views/calendar_voting_view.xml
+++ b/calendar_voting/views/calendar_voting_view.xml
@@ -25,6 +25,11 @@
                             <field name="friday" />
                         </tree>
                     </field>
+                    <ul style="list-style-type:none">
+                        <li> Link to voting site:
+                            <field name="calendar_access" widget="url"/>
+                        </li>
+                    </ul>
                 </div>
             </xpath>
         </field>
