--- a/calendar_voting/views/assets.xml
+++ b/calendar_voting/views/assets.xml
@@ -7,6 +7,7 @@
     <template id="voting_site_style" inherit_id="web.assets_frontend">
         <xpath expr="." position="inside">
             <script type="text/javascript" src="/calendar_voting/static/src/js/controller_voting.js"/>
+            <script type="text/javascript" src="/calendar_voting/static/src/js/copy_to_clipbord.js"/>
         </xpath>
     </template>
 </odoo>
