--- a/calendar_voting/views/controller_voting_view.xml
+++ b/calendar_voting/views/controller_voting_view.xml
@@ -47,7 +47,7 @@
                             <span id="cell-1" class="btn cell-voted-time" t-esc="event.showtime"></span>
                         </t>
                         <t t-else="">
-                            <span id="cell-1" class="btn cell-voting-time" t-esc="event.showtime"></span>
+                            <span id="cell-1" class="button cell-voting-time" t-esc="event.showtime"></span>
                         </t>
                         <div class="vl"></div>
                         <t t-if="my_voting.tuesday">
